--- a/filut/main.html
+++ b/filut/main.html
@@ -13,6 +13,13 @@
     </header>
     <main>
         <div id="map"></div>
+        <select id="menu-type">
+            <option value="day">Daily Menu</option>
+            <option value="week">Weekly Menu</option>
+        </select>
+        <select id="city-filter">
+            <!-- City options will be dynamically added here -->
+        </select>
         <table id="restaurant-table">
             <thead>
                 <tr>
